# AlgoKiller

./: .env.example  .gitignore  README.md  pyproject.toml  run_algokiller.py
docs/: trace_tool_skill.md
src/algokiller_harness/: __init__.py  agent_prompts.py  artifact_executor.py  ask_user_reviewer.py  cli.py  config.py  message_utils.py  model_client.py  note_compactor.py  note_store.py  prompts.py  routing_executor.py  session_store.py  tool_protocol.py  tool_schemas.py  trace_agent.py  trace_executor.py  user_executor.py
tests/: test_agent_ask_user_review.py  test_cli.py  test_config.py  test_prompts.py  test_search_binary.py  test_session_store.py  test_tool_executor.py
tools/search/: Makefile  README.md  build.sh  search.c
